--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -250,21 +250,10 @@
             let pageSize = [[${pageOfEntities.size}]];
         </script>
 
-        <!-- Botton fixed footer -->
-        <div class="fixed-footer mb-3" th:fragment="fixedFooter">
-            <div class="bg-light text-center">
-                <span class="info-copyrigth"><a class="text-info" href="https://github.com/misrraimsp/firstmarket" style="text-decoration: none">FirstMarket</a> © 2020</span>
-            </div>
-        </div>
-
-        <!-- Footer -->
-        <div class="row" th:fragment="footer">
-            <div class="col-sm-12 mt-5">
-                <footer class="bg-light text-center">
-                    <span class="info-copyrigth"><a class="text-info" href="https://github.com/misrraimsp/firstmarket" style="text-decoration: none">FirstMarket</a> © 2020</span>
-                </footer>
-            </div>
-        </div>
+        <!-- footer -->
+        <footer class="footer bg-light text-center py-2" th:fragment="footer">
+            <span class="info-copyrigth"><a class="text-info" href="https://github.com/misrraimsp/firstmarket" style="text-decoration: none">FirstMarket Project</a> © 2020</span>
+        </footer>
 
     </body>
 
