--- a/src/main/resources/templates/resetPasswordConfirmation.html
+++ b/src/main/resources/templates/resetPasswordConfirmation.html
@@ -4,7 +4,8 @@
       lang="en">
     <head th:replace="fragments/components::head('Reset Password')"></head>
     <body>
-        <div class="container-fluid">
+        <!-- fm-content -->
+        <div class="container-fluid fm-content">
             <!-- header -->
             <header th:replace="fragments/components::header"></header>
             <!-- main categories -->
@@ -24,8 +25,8 @@
                 </div>
                 <div class="col-sm-3"></div>
             </div>
-            <!-- footer -->
-            <footer th:replace="fragments/components::fixedFooter"></footer>
         </div>
+        <!-- footer -->
+        <footer th:replace="fragments/components::footer"></footer>
     </body>
 </html>
