--- a/src/main/resources/templates/deleteUser.html
+++ b/src/main/resources/templates/deleteUser.html
@@ -4,11 +4,12 @@
       lang="en">
     <head th:replace="fragments/components::head('Delete Account')"></head>
     <body>
-        <div class="container-fluid">
+        <!-- fm-content -->
+        <div class="container-fluid fm-content">
             <header th:replace="fragments/components::header"></header>
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
-            <div th:replace="fragments/components::title(text = ${firstName} + ', we\'re sorry to see you go')"></div>
+            <div th:replace="fragments/components::title(text = ${user.profile.firstName} + ', we\'re sorry to see you go')"></div>
             <div class="row">
                 <div class="col-sm-3 bg-white"></div>
                 <div class="col-sm-6 bg-light">
@@ -48,8 +49,9 @@
                 </div>
                 <div class="col-sm-3 bg-white"></div>
             </div>
-            <footer th:replace="fragments/components::footer"></footer>
         </div>
+        <!-- footer -->
+        <footer th:replace="fragments/components::footer"></footer>
         <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
     </body>
 </html>
