--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,8 @@
       lang="en">
     <head th:replace="fragments/components::head('FirstMarket')"></head>
     <body>
-        <div class="container-fluid bg-light">
+        <!-- fm-content -->
+        <div class="container-fluid fm-content bg-light">
             <!-- header -->
             <div th:replace="fragments/components::header"></div>
             <!-- main categories -->
@@ -123,9 +124,9 @@
                 </div>
                 <div class="col-sm-4"></div>
             </div>
-            <!-- footer -->
-            <div th:replace="fragments/components::footer"></div>
         </div>
+        <!-- footer -->
+        <div th:replace="fragments/components::footer"></div>
         <script th:src="@{/js/enableTooltips.js}"></script>
         <script th:src="@{/js/typeWriter.js}"></script>
         <!-- ajax add book to cart -->
