--- a/src/main/resources/templates/images.html
+++ b/src/main/resources/templates/images.html
@@ -4,7 +4,8 @@
       lang="en">
     <head th:replace="fragments/components::head('Images')"></head>
     <body>
-        <div class="container-fluid">
+        <!-- fm-content -->
+        <div class="container-fluid fm-content">
             <!-- header -->
             <header th:replace="fragments/components::header"></header>
             <!-- main categories -->
@@ -149,9 +150,9 @@
             </div>
             <!-- modal -->
             <div th:replace="fragments/components::deletingModal(entity = 'Image')"></div>
-            <!-- footer -->
-            <footer th:replace="fragments/components::footer"></footer>
         </div>
+        <!-- footer -->
+        <footer th:replace="fragments/components::footer"></footer>
         <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
         <script th:src="@{/js/enableTooltips.js}"></script>
         <!-- pagination functionality -->
