--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -5,7 +5,8 @@
       lang="en">
     <head th:replace="fragments/components::head('Orders')"></head>
     <body>
-        <div class="container-fluid">
+        <!-- fm-content -->
+        <div class="container-fluid fm-content">
             <!-- header -->
             <header th:replace="fragments/components::header"></header>
             <!-- main categories -->
@@ -230,9 +231,9 @@
                 </div>
                 <div class="col-sm-4"></div>
             </div>
-            <!-- footer -->
-            <footer th:replace="fragments/components::footer"></footer>
         </div>
+        <!-- footer -->
+        <footer th:replace="fragments/components::footer"></footer>
         <script th:src="@{/js/orders.js}"></script>
         <!-- pagination functionality -->
         <a id="paginationTrigger" style="display: none"></a>
