--- a/src/main/resources/templates/images.html
+++ b/src/main/resources/templates/images.html
@@ -132,7 +132,7 @@
                         </tbody>
                     </table>
                     <!-- pagination -->
-                    <div class="row mt-4">
+                    <div class="row mt-3 mb-5">
                         <div class="col-sm-4"></div>
                         <div class="col-sm-4">
                             <!-- pagination links -->
