--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -150,7 +150,7 @@
                 <div class="col-sm-1"></div>
             </div>
             <!-- pagination -->
-            <div class="row mt-4">
+            <div class="row mt-3 mb-5">
                 <div class="col-sm-4"></div>
                 <div class="col-sm-4">
                     <!-- pagination links -->
